# pyradlib

./: .gitignore  README.md  pyproject.toml
examples/: film_calibration.py  seven_distance.py
pyradlib/: __init__.py
pyradlib/brachy/: README.md  calibration.py
pyradlib/film/: README.md  calibration.py
pyradlib/kilovoltage/: tg61.py
pyradlib/kilovoltage/data/: README.md  tg61_table4a_hvl.npy  tg61_table4b_hvl.npy  tg61_table5a_v.npy  tg61_table5a_x.npy  tg61_table5b_v.npy  tg61_table5c_v.npy  tg61_table5c_y.npy  tg61_table5c_z.npy  tg61_table6_x.npy
pyradlib/mcdtk/: README.md  egsnrc.py  womed.py
pyradlib/radixact/: README.md  motion.py  plan.py
pyradlib/radixact/schemata/: rdsResults.md
pyradlib/spc/: spc.py
pyradlib/spc/data/: constants.csv
pyradlib/tada/: README.md  assessor.py  complexity.py  verisoft.py
radlib/film/: calibration.py
radlib/mcdtk/: egsnrc.py  womed.py
radlib/tada/: README.md  complexity.py
src/pyradlib/: __init__.py  dose.py
src/pyradlib/brachy/: README.md  xoft.py
src/pyradlib/film/: README.md  calibration.py
src/pyradlib/kilovoltage/data/: tg61_table4a_mac.npy  tg61_table4b_mac.npy  tg61_table5a_z.npy  tg61_table5b_x.npy  tg61_table5c_v.npy  tg61_table6_v.npy  tg61_table6_y.npy
src/pyradlib/mcdtk/: egsnrc.py  womed.py
src/pyradlib/radixact/: PDE.md  motion.py  sinogram.py
src/pyradlib/radixact/schemata/: GeneralPlan.md  MetaInfo.md  README.md  TelemTiming.md  dplan.md  motionData.md
src/pyradlib/spc/data/: README.md
src/pyradlib/tada/: README.md  __init__.py  complexity.py
