[project]
name = "pyradlib"
version = "0.1.0"
authors = [
    { name = "Scott Crowe", email = "sb.crowe@gmail.com" }
]
classifiers=[
    "Programming Language :: Python"
]
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydicom>=3.0.1",
    "scipy>=1.16.3",
]
description = "Python Radiotherapy Library"
readme = "README.md"
requires-python = ">=3.14"

[project.scripts]
pyradlib = "pyradlib:main"

[project.urls]
Repository = "https://github.com/sbcrowe/pyradlib.git"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
